--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-lg-8">
                     <!-- About Start -->
-                    <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+                    <section id="about" class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
                         <p>I am a motivated and creative web developer with a passion for designing and building innovative websites. With a strong foundation in both development and design, I enjoy crafting visually appealing, user-friendly web solutions. My attention to detail and problem-solving skills help me deliver seamless and efficient websites. Whether it is front-end design or back-end functionality, I aim to combine creativity and technology to create digital experiences that not only meet client expectations but also push the boundaries of what a website can do. I'm always eager to learn new technologies and apply fresh ideas to each project I work on.</p>
                         <div class="row mb-4">
@@ -63,7 +63,7 @@
                                 <span class="fw-medium text-primary">Name:</span> Ratul Gaur
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Birthday:</span> 6 June 2001
+                                <span class="fw-medium text-primary">Birthday:</span> 30 June 2001
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Degree:</span> Bachelor of Technology (C.S.E)
@@ -117,7 +117,7 @@
                     <!-- About End -->
 
                     <!-- Skills Start -->
-                    <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+                    <section id="skills" class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Skills</h1>
                         <div class="row">
                             <div class="col-sm-6">
@@ -183,8 +183,8 @@
                     <!-- Skills End -->
 
                     <!-- Expericence Start -->
-                    <section class="experience wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="title pb-3 mb-5">Expericence</h1>
+                    <section id="experience" class="experience wow fadeInUp mt-5" data-wow-delay="0.1s">
+                        <h1 class="title pb-3 mb-5">Experience</h1>
                         <div class="border-start border-2 border-light pt-2 ps-5">
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
@@ -235,7 +235,7 @@
                     <!-- Subscribe End -->
 
                     <!-- Services Start -->
-                    <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+                    <section id="services" class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Services</h1>
                         <div class="row g-4">
                             <div class="col-md-6">
@@ -271,7 +271,7 @@
                     <!-- Services End -->
 
                     <!-- Portfolio Start -->
-                    <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+                    <section id="portfolio" class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Portfolio</h1>
                         <div class="row">
                             <div class="col-12">
@@ -334,7 +334,7 @@
                     <!-- Portfolio End -->
 
                     <!-- Contact Start -->
-                    <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
+                    <section id="contact" class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
                         <h1 class="title pb-3 mb-5">Contact Me</h1>
 						<p class="mb-4">The contact form is not working yet but if you want a working contact form on your website designed to appeal. Message me now ;]<a href="https://wa.me/message/X3DLR5IFHHVSJ1">  WhatsApp</a></p>
                         <form>
